# qlac

./: .gitignore  AUTHORS  CHANGELOG.md  CITATION.cff  CMakeLists.txt  COPYING.QLAC  FORK_NOTES.md  LICENSE  NOTICE  README.md  config.cmake.h.in
assessment/: CMakeLists.txt  assessment.cpp
cmake/: CheckA64NEON.c.in  CheckA64NEON.cmake  CheckCPUArch.c.in  CheckCPUArch.cmake  UseSystemExtensions.cmake
include/QLAC/: assert.h  export.h  format.h  memory.h  ordinals.h  stream_decoder.h  stream_encoder.h
include/QLAC++/: block_codec.hpp  compat_block_info.hpp
include/share/: alloc.h  compat.h  endswap.h
src/libQLAC/: CMakeLists.txt  bitmath.c  bitreader.c  bitwriter.c  cpu.c  fixed.c  fixed_intrin_avx2.c  fixed_intrin_sse2.c  fixed_intrin_sse42.c  fixed_intrin_ssse3.c  float.c  format.c  lpc.c  lpc_intrin_avx2.c  lpc_intrin_fma.c  lpc_intrin_neon.c  lpc_intrin_sse2.c  lpc_intrin_sse41.c  memory.c  qlac.pc.in  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c  version.rc  window.c
src/libQLAC/deduplication/: bitreader_read_rice_signed_block.c  lpc_compute_autocorrelation_intrin.c  lpc_compute_autocorrelation_intrin_neon.c  lpc_compute_autocorrelation_intrin_sse2.c
src/libQLAC/include/private/: bitmath.h  bitreader.h  bitwriter.h  cpu.h  fixed.h  float.h  lpc.h  macros.h  memory.h  stream_encoder_framing.h  window.h
src/libQLAC/include/protected/: stream_decoder.h  stream_encoder.h
tests/: CMakeLists.txt
tests/TestDummy/: CMakeLists.txt  dummy.cpp
tests/TestPatterns/: CMakeLists.txt  patterns.cpp
tests/TestRandom/: CMakeLists.txt  random_blocks.cpp
tests/TestWav/: CMakeLists.txt  wav_bench.cpp
